# choir

./: Cargo.toml  Dockerfile  README.md
src/: config.rs  main.rs  response.rs
src/ai_functions/: get_weather.rs  mod.rs  website_to_md.rs
src/macros/: auth.rs
src/modules/: choir.rs  mod.rs  openai.rs
src/routes/: choir.rs  health.rs  mod.rs
src/types/: mod.rs  tchoir.rs
src/utils/: mod.rs  webutils.rs
