[package]
name = "choir"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.9"
tokio = "1.45.0"
uuid = { version = "1.16.0", features = ["v4"]}
urlencoding = "2"
tracing = "0.1.41"
chrono = "0.4.41"
serde_json = "1.0.141"
async-openai = "0.29.0"
async-trait = "0.1.88"
log = "0.4.27"
schemars = { version = "1.0.4", features = ["derive"] }
futures = "0.3"
firecrawl = "1.2.1"
regex = "1.10.2"
